    Fixed the editor incorrectly stealing focus during initialization in Microsoft IE #TINY-4697
    Fixed the context toolbar overlapping with the menu bar and toolbar #TINY-4586
    Fixed notification and inline dialog positioning issues when using the bottom toolbar #TINY-4586
    Fixed the `colorinput` popup appearing offscreen on mobile devices #TINY-4711
    Fixed an issue where dragging images could cause them to be duplicated #TINY-4195
    Fixed context toolbars activating without the editor having focus #TINY-4754
Version 5.2.0 (2020-02-13)
    Added the ability to apply formats to spaces #TINY-4200
    Added new `toolbar_location` setting to allow for positioning the menu and toolbar at the bottom of the editor #TINY-4210
    Added new `toolbar_groups` setting to allow a custom floating toolbar group to be added to the toolbar when using `floating` toolbar mode #TINY-4229
    Added new `link_default_protocol` setting to `link` and `autolink` plugin to allow a protocol to be used by default #TINY-3328
    Added new `placeholder` setting to allow a placeholder to be shown when the editor is empty #TINY-3917
    Added new `tinymce.dom.TextSeeker` API to allow searching text across different DOM nodes #TINY-4200
    Added a drop shadow below the toolbar while in sticky mode and introduced Oxide variables to customize it when creating a custom skin #TINY-4343
    Added `quickbars_image_toolbar` setting to allow for the image quickbar to be turned off #TINY-4398
    Added iframe and img `loading` attribute to the default schema. Patch contributed by ataylor32. #GH-5112
    Added new `getNodeFilters`/`getAttributeFilters` functions to the `editor.serializer` instance #TINY-4344
    Added new `a11y_advanced_options` setting to allow additional accessibility options to be added #FOAM-11
    Added new accessibility options and behaviours to the image dialog using `a11y_advanced_options` #FOAM-11